Made scrolling work when time plot reaches width of canvas. Add basic colouring options, scale y values to honour provided maxY in options

--- a/test.html
+++ b/test.html
@@ -23,11 +23,9 @@
         window.addEventListener('load', () => {
             var el = document.getElementById('liveGraph');
             var graph = new LiveGraph(el, {
-                width: 200,
-                height: 60,
-                yRange: [0, 100]
+                maxY: 50,
+                label: 'FPS'
             });
-            graph.clear();
 
             var x = 0;
             var y = 0;
