--- a/test.html
+++ b/test.html
@@ -27,8 +27,9 @@
                 label: 'FPS'
             });
 
-            var x = 0;
-            var y = 0;
+            var x = 0,
+                y = 0;
+                
             requestAnimationFrame(plot);
             function plot(t) {
                 requestAnimationFrame(plot);
